--- a/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Base.lproj/Main.storyboard
+++ b/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
@@ -15,13 +15,74 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3Hu-Kt-1wC">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="sD1-43-BFs">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="3Hu-Kt-1wC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="N7u-b5-Enk"/>
+                            <constraint firstItem="3Hu-Kt-1wC" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Vvv-1I-Jhd"/>
+                            <constraint firstAttribute="bottom" secondItem="3Hu-Kt-1wC" secondAttribute="bottom" id="d8f-fM-tvy"/>
+                            <constraint firstItem="3Hu-Kt-1wC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="nHg-Po-1yk"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="NVB-WF-UkE"/>
+                    <connections>
+                        <outlet property="collectionView" destination="3Hu-Kt-1wC" id="R6r-Hw-saZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-11" y="4"/>
+            <point key="canvasLocation" x="703" y="72"/>
+        </scene>
+        <!--Product Detail View Controller-->
+        <scene sceneID="HcP-e2-OVd">
+            <objects>
+                <viewController id="VU0-lO-1Jw" customClass="ProductDetailViewController" customModule="CompositionalLayoutDemoApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YhQ-Lr-DjU">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="h4X-Gd-heu">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="DPq-Cy-MNJ">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="bfi-5V-Nvw"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="h4X-Gd-heu" firstAttribute="leading" secondItem="bfi-5V-Nvw" secondAttribute="leading" id="1ix-n6-cSY"/>
+                            <constraint firstItem="h4X-Gd-heu" firstAttribute="top" secondItem="YhQ-Lr-DjU" secondAttribute="top" id="5Zz-L3-cN6"/>
+                            <constraint firstAttribute="bottom" secondItem="h4X-Gd-heu" secondAttribute="bottom" id="6Iu-Ae-Fry"/>
+                            <constraint firstItem="h4X-Gd-heu" firstAttribute="trailing" secondItem="bfi-5V-Nvw" secondAttribute="trailing" id="c1v-ND-cod"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="TL9-Bv-kRZ"/>
+                    <connections>
+                        <outlet property="collectionView" destination="h4X-Gd-heu" id="wal-6u-qNG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4SJ-fN-9No" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1685" y="72"/>
         </scene>
     </scenes>
     <resources>
