--- a/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Home/Header/HeaderCell.xib
+++ b/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Home/Header/HeaderCell.xib
@@ -4,20 +4,38 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HeaderCell" id="gTV-IL-0wX" customClass="HeaderCell" customModule="CompositionalLayoutDemoApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="125"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="125"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iyF-Ja-Ptc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="125"/>
+                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <point key="canvasLocation" x="86" y="-12"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="iyF-Ja-Ptc" secondAttribute="bottom" id="1ja-YE-9M3"/>
+                <constraint firstItem="iyF-Ja-Ptc" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="76l-KB-Nea"/>
+                <constraint firstAttribute="trailing" secondItem="iyF-Ja-Ptc" secondAttribute="trailing" id="a9L-Tc-Ten"/>
+                <constraint firstItem="iyF-Ja-Ptc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="ffD-tK-fdh"/>
+            </constraints>
+            <point key="canvasLocation" x="85.384615384615387" y="-12.440758293838861"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
