--- a/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Home/Categories/CategoriesCell.xib
+++ b/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Home/Categories/CategoriesCell.xib
@@ -4,20 +4,43 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoriesCell" id="gTV-IL-0wX" customClass="CategoriesCell" customModule="CompositionalLayoutDemoApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="144"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="144"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dax-34-cnC">
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="144"/>
+                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <integer key="value" value="18"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <point key="canvasLocation" x="86" y="-12"/>
+            <constraints>
+                <constraint firstItem="dax-34-cnC" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="04E-6N-esg"/>
+                <constraint firstAttribute="bottom" secondItem="dax-34-cnC" secondAttribute="bottom" id="0uL-n9-N1Y"/>
+                <constraint firstItem="dax-34-cnC" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="1k3-wu-4RH"/>
+                <constraint firstAttribute="trailing" secondItem="dax-34-cnC" secondAttribute="trailing" id="GQh-UV-jt4"/>
+            </constraints>
+            <point key="canvasLocation" x="84.615384615384613" y="-12.085308056872037"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
