--- a/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/SupportingViews/SearchBar/SearchBarCell.xib
+++ b/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/SupportingViews/SearchBar/SearchBarCell.xib
@@ -4,20 +4,44 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SearchBarCell" id="gTV-IL-0wX" customClass="SearchBarCell" customModule="CompositionalLayoutDemoApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="318" height="54"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="318" height="54"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lps-Go-tAW">
+                        <rect key="frame" x="0.0" y="0.0" width="318" height="54"/>
+                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <point key="canvasLocation" x="27.69230769230769" y="-12.085308056872037"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="Lps-Go-tAW" secondAttribute="bottom" id="2Gc-I9-v6h"/>
+                <constraint firstItem="Lps-Go-tAW" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="I3O-J2-nt8"/>
+                <constraint firstAttribute="trailing" secondItem="Lps-Go-tAW" secondAttribute="trailing" id="SfB-cr-Z09"/>
+                <constraint firstItem="Lps-Go-tAW" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="aHm-ed-9mq"/>
+            </constraints>
+            <size key="customSize" width="225" height="50"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                    <integer key="value" value="18"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
+            <point key="canvasLocation" x="80" y="-41"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
