--- a/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Base.lproj/Main.storyboard
+++ b/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Base.lproj/Main.storyboard
@@ -26,6 +26,9 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="JIy-eH-NKc"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -49,7 +52,7 @@
         <!--Product Detail View Controller-->
         <scene sceneID="HcP-e2-OVd">
             <objects>
-                <viewController id="VU0-lO-1Jw" customClass="ProductDetailViewController" customModule="CompositionalLayoutDemoApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="productDetailView" id="VU0-lO-1Jw" customClass="ProductDetailViewController" customModule="CompositionalLayoutDemoApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YhQ-Lr-DjU">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
